--- a/Brick_Breaker/Brick_Breaker/Brick_Breaker.vcxproj
+++ b/Brick_Breaker/Brick_Breaker/Brick_Breaker.vcxproj
@@ -127,13 +127,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Area.h" />
     <ClInclude Include="Brick_Breaker.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="Paddle.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Area.cpp" />
     <ClCompile Include="Brick_Breaker.cpp" />
+    <ClCompile Include="Paddle.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Brick_Breaker.rc" />
