1021_Ball클래스 추가 및 윈도우 사이즈 수정

--- a/Brick_Breaker/Brick_Breaker/Brick_Breaker.vcxproj
+++ b/Brick_Breaker/Brick_Breaker/Brick_Breaker.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Area.h" />
+    <ClInclude Include="Ball.h" />
     <ClInclude Include="Brick_Breaker.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Paddle.h" />
@@ -136,6 +137,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Area.cpp" />
+    <ClCompile Include="Ball.cpp" />
     <ClCompile Include="Brick_Breaker.cpp" />
     <ClCompile Include="Paddle.cpp" />
   </ItemGroup>
