--- a/Brick_Breaker/Brick_Breaker/Brick_Breaker.vcxproj.filters
+++ b/Brick_Breaker/Brick_Breaker/Brick_Breaker.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="Paddle.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Ball.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Brick_Breaker.cpp">
@@ -42,6 +45,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Paddle.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Ball.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
