--- a/Brick_Breaker/Brick_Breaker/Brick_Breaker.vcxproj
+++ b/Brick_Breaker/Brick_Breaker/Brick_Breaker.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClInclude Include="Area.h" />
     <ClInclude Include="Ball.h" />
+    <ClInclude Include="Brick.h" />
     <ClInclude Include="Brick_Breaker.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Paddle.h" />
@@ -138,6 +139,7 @@
   <ItemGroup>
     <ClCompile Include="Area.cpp" />
     <ClCompile Include="Ball.cpp" />
+    <ClCompile Include="Brick.cpp" />
     <ClCompile Include="Brick_Breaker.cpp" />
     <ClCompile Include="Paddle.cpp" />
   </ItemGroup>
