--- a/Brick_Breaker/Brick_Breaker/Brick_Breaker.vcxproj.filters
+++ b/Brick_Breaker/Brick_Breaker/Brick_Breaker.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="Ball.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Brick.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Brick_Breaker.cpp">
@@ -48,6 +51,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="Ball.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="Brick.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
