--- a/Brick_Breaker/Brick_Breaker/Brick_Breaker.vcxproj
+++ b/Brick_Breaker/Brick_Breaker/Brick_Breaker.vcxproj
@@ -132,6 +132,7 @@
     <ClInclude Include="Brick.h" />
     <ClInclude Include="Brick_Breaker.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="Item.h" />
     <ClInclude Include="Paddle.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
@@ -141,6 +142,7 @@
     <ClCompile Include="Ball.cpp" />
     <ClCompile Include="Brick.cpp" />
     <ClCompile Include="Brick_Breaker.cpp" />
+    <ClCompile Include="Item.cpp" />
     <ClCompile Include="Paddle.cpp" />
   </ItemGroup>
   <ItemGroup>
